# weather-app

./: .gitignore  README.md  config.py  coordinates.py  coverage-base.lcov  coverage.lcov  exceptions.py  history.py  pyproject.toml  temperature_converter.py  weather  weather_api_service.py  weather_formatter.py  weather_test.py
.github/actions/coverage-report/: action.yml
.github/workflows/: branch-merge.yml  commit-inside-action.yml  github-actions-demo.yml
